Massive update to graphs.js, new graphs created by button functionality implemented, reset chart button functionality implemented. stying applied to button layout

--- a/assets-src/scss/modules/_charts.scss
+++ b/assets-src/scss/modules/_charts.scss
@@ -37,6 +37,17 @@
 //      }
 // }
 
-#Selector select{
-    width:100%;
+#button_container{
+    @include make-col(12);
+    button{
+        width:100%;
+        padding: 5px 0 5px 0;
+        border-radius:5px;
+        border-color:#FFF;
+    }
+    @include media-breakpoint-down(sm){
+        button{
+            @include make-col(6);
+        }
+    }
 }
