Graphs js finalised, some styling changes to include graph scrolling on the 'Local Authority' view.

--- a/assets-src/scss/main.scss
+++ b/assets-src/scss/main.scss
@@ -21,6 +21,7 @@ body, main{
         @include media-breakpoint-down(sm){
         // Override default layout display
         display:block !important;
+        height:100%;
         }
 }
 
