--- a/assets-src/scss/modules/_charts.scss
+++ b/assets-src/scss/modules/_charts.scss
@@ -2,17 +2,17 @@
 .svg-content-responsive {
     display: inline-block;
     position: relative;
+    margin-bottom:15px;
     top: 10px;
     left: 0;
 }
 .svg-container {
     display: inline-block;
     position: fixed;
-    // width: 100%;
-    background-color: $orange;
-    padding-bottom: 100%; /* aspect ratio */
-    vertical-align: top;
-    // overflow: hidden;
+   vertical-align: top;
+   @include media-breakpoint-down(sm){
+    position:relative;
+   }
 }
 // ----------------------------
 
