Utils.js reviewed to show/hide back button and reset button, graphs js altered to adjust positioning of the column chart, changes to index.html and styling fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1377,6 +1377,9 @@ footer {
 .regSelect {
   white-space: normal !important; }
 
+.master_reset {
+  width: 100%; }
+
 .halfwidth {
   width: 50%;
   display: inline-block; }
@@ -1404,6 +1407,8 @@ footer {
     padding: 5px 0 5px 0;
     border-radius: 5px;
     border-color: #FFF; }
+    #button_container button.halfwidth {
+      width: 50%; }
   @media (max-width: 767.98px) {
     #button_container button {
       flex: 0 0 50%;
