--- a/assets-src/scss/main.scss
+++ b/assets-src/scss/main.scss
@@ -54,6 +54,9 @@ footer{
 .regSelect{
     white-space: normal !important;
 }
+.master_reset{
+    width:100%;
+}
 .halfwidth{
     width:50%;
     display:inline-block;
