--- a/assets-src/scss/modules/_charts.scss
+++ b/assets-src/scss/modules/_charts.scss
@@ -44,6 +44,9 @@
         padding: 5px 0 5px 0;
         border-radius:5px;
         border-color:#FFF;
+        &.halfwidth{
+            width:50%;
+        }
     }
     @include media-breakpoint-down(sm){
         button{
