Chart styling changes, changed 'fixed' to relative and commented out footer margin-top in utils.js

--- a/assets-src/scss/modules/_charts.scss
+++ b/assets-src/scss/modules/_charts.scss
@@ -8,7 +8,7 @@
 }
 .svg-container {
     display: inline-block;
-    position: fixed;
+    position: relative;
    vertical-align: top;
    @include media-breakpoint-down(sm){
     position:relative;
